--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -42,22 +42,22 @@
         android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/set_default_time"/>
+        android:text="@string/default_time"/>
     <Button
         android:id="@+id/repeat_button"
         android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/set_default_repeat" />
+        android:text="@string/default_repeat" />
     <Button
         android:textSize="22sp"
         android:id="@+id/snooze_button"
-        android:text="@string/set_default_snooze"
+        android:text="@string/default_snooze"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:textSize="22sp"
-        android:text="@string/reminders"
+        android:text="@string/default_reminders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <ListView
