--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/group_name_label"
-        android:labelFor="@+id/task_title"
+        android:labelFor="@+id/group_name"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
-            android:id="@+id/task_name"
+            android:id="@+id/group_name"
             android:layout_width="0dp"
             android:textSize="40sp"
             android:layout_height="wrap_content"
