--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -10,108 +10,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/task_name_label"
+        android:text="@string/group_name_label"
         android:labelFor="@+id/task_name"
         />
     <EditText
         android:id="@+id/task_name"
         android:layout_width="match_parent"
+        android:textSize="40sp"
         android:layout_height="wrap_content"/>
-
-    <LinearLayout
+    <Button
+        android:id="@+id/time_button"
+        android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/date_button"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:layout_height="wrap_content"
-            android:text="@string/date"/>
-        <Button
-            android:id="@+id/time_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:text="@string/time"/>
-        <ImageButton
-            android:id="@+id/clear_time_button"
-            android:background="#00000000"
-            android:src="@drawable/ic_close_black_24dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    <LinearLayout
+        android:text="@string/set_time"/>
+    <Button
+        android:id="@+id/repeat_button"
+        android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/repeat_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="8"
-            android:text="@string/repeat"
-            />
-        <ImageButton
-            android:id="@+id/clear_repeat_button"
-            android:background="#00000000"
-            android:src="@drawable/ic_close_black_24dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    <LinearLayout
+        android:text="@string/repeat" />
+    <Button
+        android:textSize="22sp"
+        android:id="@+id/snooze_button"
+        android:text="@string/default_snooze"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/location_button"
-            android:layout_width="0dp"
-            android:layout_weight="8"
-            android:layout_height="wrap_content"
-            android:text="@string/location"/>
-        <ImageButton
-            android:id="@+id/clear_location_button"
-            android:background="#00000000"
-            android:src="@drawable/ic_close_black_24dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"/>
-    </LinearLayout>
+        android:layout_height="wrap_content" />
     <TextView
-        android:textSize="19sp"
+        android:textSize="22sp"
         android:text="@string/reminders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/reminder_list_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="200dp">
     </ListView>
-    <Button
-        android:id="@+id/add_reminder_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/add_reminder"/>
-    <Button
-        android:id="@+id/alarm_test_button"
-        android:text="@string/test_alarm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/snooze_button"
-        android:text="@string/snooze"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:text="@string/complete"
-        android:id="@+id/complete_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
 </LinearLayout>
