--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginLeft="16dp">
+    android:layout_marginStart="16dp"
+    android:layout_marginBottom="16dp">
     <TextView
+        android:textAllCaps="true"
         android:id="@+id/name_label"
-        android:textSize="17sp"
+        android:textSize="22sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -19,8 +23,9 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/group_name"
+            android:inputType="text"
             android:layout_width="0dp"
-            android:textSize="40sp"
+            android:textSize="24sp"
             android:layout_height="wrap_content"
             android:layout_weight="3"/>
         <FrameLayout
@@ -37,32 +42,68 @@
                 android:layout_gravity="center"/>
         </FrameLayout>
     </LinearLayout>
-    <Button
-        android:id="@+id/time_button"
-        android:textSize="22sp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/default_time"/>
-    <Button
-        android:id="@+id/repeat_button"
+        android:orientation="vertical"
+        >
+    <TextView
+        android:textColor="@color/black"
         android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:text="@string/default_time"/>
+        <TextView
+            android:id="@+id/time_button"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"/>
+    <TextView
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="22sp"
+        android:layout_marginTop="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/default_repeat" />
-    <Button
-        android:textSize="22sp"
-        android:id="@+id/snooze_button"
-        android:text="@string/default_snooze"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:textSize="22sp"
+        <TextView
+            android:id="@+id/repeat_button"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"/>
+        <TextView
+            android:textColor="@color/black"
+            android:text="@string/default_snooze"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_marginTop="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/snooze_button"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"/>
+        <TextView
+        android:textSize="20sp"
         android:text="@string/default_reminders"
+        android:layout_marginTop="15dp"
+        android:textAllCaps="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    </LinearLayout>
     <ListView
         android:id="@+id/reminder_list_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp">
     </ListView>
 </LinearLayout>
