--- a/app/src/main/res/menu/fragment_tasklist.xml
+++ b/app/src/main/res/menu/fragment_tasklist.xml
@@ -2,7 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/new_task"
-        android:icon="@drawable/ic_menu_add"
+        android:icon="@drawable/ic_add"
         android:title="@string/new_task"
         app:showAsAction="ifRoom|withText"/>
     <item
