--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"/>
         <Spinner
+            android:id="@+id/group_spinner"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
